# Miku

./: .dockerignore  .editorconfig  .env.example  .gitignore  ALL_FIXES_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DASHBOARD_PERFORMANCE_FIX.md  DASHBOARD_READY.md  DEPLOYMENT.md  Dockerfile  KEEP_ALIVE_SETUP.md  LEVELING_CONFIG.md  LICENSE  QUICKSTART.md  README.md  RENDER_DEPLOYMENT_FIX.md  SECURITY.md  VERCEL_FIX.md  alembic.ini  api_start.py  check_render_env.py  docker-compose.yml  main.py  migrate_to_postgres.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt  start_all.py  test-dashboard-performance.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  enhancement.yml  feature_request.md  feature_request.yml  good_first_issue.yml  question.yml
.github/workflows/: ci.yml  dependency-review.yml  deploy-dashboard.yml  deploy.yml  keep-alive.yml  nightly.yml  repo-health.yml  security.yml
alembic/: __init__.py  env.py
alembic/versions/: 0001_initial_schema.py
bot/: __init__.py  __main__.py  config.py  database.py
bot/extensions/developer/: __init__.py  guards.py
bot/extensions/example/: __init__.py
bot/extensions/leveling/: __init__.py  cogs.py  repositories.py
bot/extensions/leveling/errors/: __init__.py  leveling.py
bot/extensions/leveling/models/: __init__.py  domain.py  sql.py
bot/extensions/leveling/services/: __init__.py  leveling.py  rank_card.py
dash/: .env.example  .prettierignore  DATA_INTEGRATION.md  QUICK_DEPLOY.md  README.md  next.config.js  package-lock.json  package.json  setup.bat  setup.sh  tailwind.config.js  vercel.json
dash/docs/: API_INTEGRATION.md  FILE_STRUCTURE.md  README.md  SETUP.md
dash/public/: index.html
dash/src/components/: LeaderboardTable.tsx  LoadingSpinner.tsx  Navbar.tsx  ServerCard.tsx  StatsCard.tsx  StatsOverview.tsx
dash/src/lib/: api.ts  database.ts  utils.ts
dash/src/pages/: _app.tsx  _document.tsx  dashboard.tsx  index.tsx
dash/src/pages/api/: guilds.ts
dash/src/pages/api/auth/: [...nextauth].ts
dash/src/pages/api/server/[serverId]/: settings.ts  (+3 more)
dash/src/pages/server/: [serverId].tsx
dash/src/pages/server/[serverId]/: settings.tsx
dash/src/styles/: globals.css
dash/src/types/: index.ts  next-auth.d.ts
dashboard/: GUIDE.md  requirements.txt
dashboard/backend/: auth.py  config.py  database.py  discord_api.py  health.py  main.py  security.py
dashboard/backend/templates/: analytics.html  base.html  dashboard.html  leaderboard.html  leveling.html  login.html  rewards.html  settings.html  users.html
dashboard/static/: api.js  style.css
data/: leveling.db
docs/: API.md  CLEANUP_SUMMARY.md  DEPLOYMENT.md  POSTGRES_SETUP.md  PRIVACY_POLICY.md  QUICKSTART.md  QUICK_START_PERFORMANCE.md  README.md  TERMS_OF_SERVICE.md  TIMEOUT_FIX.md  VERCEL_ENV_FIX.md
docs/.obsidian/: .gitignore  workspace.json
scripts/: README.md  api_start.py  fix_levels.py  init-db.sql  start_all.py
src/: api_server.py  bot.py
src/cogs/: __init__.py  achievements.py  command_handler.py  fun.py  github.py  help.py  info.py  leveling.py  quests.py  utilities.py  voice_xp.py
src/services/: __init__.py  formula_registry.py  level_service.py
src/shared/: __init__.py  formula.py
src/utils/: __init__.py  cooldowns.py  database.py  discord_helpers.py  github_client.py  rank_card.py
tests/: __init__.py  conftest.py  test_dashboard.py  test_database.py  test_formula.py  test_github_client.py  test_level_service.py  test_rank_card.py  test_security.py
